fix: fix page overflow bug
root page translation on x axis  when signup form engaged created overflow. fix by setting overflow
to hidden

fix #7 page overflow...

--- a/src/stylesheets/css/main.css
+++ b/src/stylesheets/css/main.css
@@ -255,7 +255,8 @@ body {
           color: white; }
 
 .shift-left {
-  transform: translate3d(40%, 0, 0); }
+  transform: translate3d(30%, 0, 0);
+  position: absolute; }
   @media screen and (max-width: 650px) {
     .shift-left {
       transform: translate3d(100%, 0, 0); } }
@@ -683,9 +684,7 @@ body {
   transition: all 0.3s ease; }
   @media screen and (max-width: 650px) {
     .SignupForm {
-      width: 80vw;
-      margin-left: auto;
-      margin-right: auto; } }
+      width: 80vw; } }
   .SignupForm label {
     margin-bottom: 0.5rem;
     font-size: 1.2rem; }
@@ -717,28 +716,42 @@ body {
   position: fixed;
   background: #ffffff;
   height: 80vh;
-  width: 50vw;
+  width: 39vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   transform: translate3d(-100%, 0, 0);
-  padding-left: 2rem;
-  padding-top: 2rem; }
+  padding-left: 2.25rem;
+  padding-top: 2rem;
+  transition: all 0.3s ease; }
   .offscreen label {
-    margin-bottom: 0.2rem;
+    margin-bottom: 0.5rem;
     font-size: 1.2rem; }
-  .offscreen input {
+  .offscreen input[type="text"],
+  .offscreen input[type="email"] {
     margin-bottom: 1rem;
     padding: 0.3rem 0.5rem;
-    width: 50%;
+    width: 60%;
     height: 2rem;
     font-size: 0.9rem;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    outline: none; }
+    outline: none;
+    transition: #005cbf 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+    @media screen and (max-width: 750px) {
+      .offscreen input[type="text"],
+      .offscreen input[type="email"] {
+        width: 60%; } }
+  .offscreen .radio-choice {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    align-items: center; }
 
 .Root {
-  position: relative; }
+  position: relative;
+  overflow-x: hidden;
+  height: 100vh; }
 
 .Home,
 .shift-left {
@@ -984,7 +997,8 @@ body {
           color: white; }
 
 .shift-left {
-  transform: translate3d(40%, 0, 0); }
+  transform: translate3d(30%, 0, 0);
+  position: absolute; }
   @media screen and (max-width: 650px) {
     .shift-left {
       transform: translate3d(100%, 0, 0); } }
