--- a/src/stylesheets/scss/partials/_Root.scss
+++ b/src/stylesheets/scss/partials/_Root.scss
@@ -1,3 +1,5 @@
 .Root {
   position: relative;
+  overflow-x: hidden;
+  height: 100vh;
 }
